# kinect_slam

./: CMakeLists.txt  CMakeLists.txt~  EKF_SLAM_Node.cpp  README.md  package.xml
cfg/: EKFSLAMConfig.cfg  EKFSLAMConfig.cfg~  KinectSLAMConfig.cfg  LandmarkExtractorConfig.cfg  LandmarkExtractorConfig.cfg~
launch/: slam.launch  slam.launch~  test.rviz
msg/: LandmarkMsg.msg  PioneerVelControl.msg  PioneerVelControl.msg~
real/: LandmarkExtractorNode.cpp
src/: BRIEF.cpp  BRIEF.hpp  Control.cpp  Control.hpp  Control_Node.cpp  Control_Node.hpp  Control_Node_1.cpp  EKF.cpp  EKF.hpp  EKF_SLAM.cpp  EKF_SLAM.hpp  EKF_SLAM_Node.cpp  EKF_SLAM_Node.hpp  HarrisDetector.cpp  HarrisDetector.hpp  LandmarkExtractorNode.cpp  LandmarkExtractorNode.hpp  LandmarkExtractorNode_main.cpp  LandmarkMatcherNode.cpp  LandmarkMatcherNode.hpp  MapServerNode.cpp  MapServerNode.hpp  MapServerNode_main.cpp  MappingSimulation.cpp  MappingSimulation.hpp  MappingSimulation_main.cpp  PioneerVelPublisher.cpp  PointCloudNode.cpp  PointCloudNode.hpp  PointCloudeNode_main.cpp  StereoMatcher.cpp  StereoMatcher.hpp  Truth_Node.cpp  a.out  control_main.cpp  ekf_slam_node_main.cpp  go_ahead.cpp  go_straight.cpp  landmark_matcher_main.cpp  main_control.cpp  (+9 more)
tum/: LandmarkExtractorNode.cpp
